--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,11 @@
 
+* Fix memory leaks.
+
+* Replace FbleThunkValue with FbleFuncValue
+ - use zero arg func value for proc.
+
+* Update the language spec.
+
 * [profile] Remove special block 0
  - Add block data at the profile level representing 'total' and special case
    that way instead. So that literally it is impossible for anyone to call
