Update spec tests for new function type behavior.

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,8 +3,9 @@
  - use zero arg func value for proc.
 
 * Update the language spec for func type change.
-* Update the spec test for func type change.
 * Allow zero-argument functions in the language spec?
+* Consider removing function bind syntax?
+ - It doesn't seem too useful to be honest.
 
 * [profile] Remove special block 0
  - Add block data at the profile level representing 'total' and special case
