Cache pc, statics, and locals in RunThread.
Instead of constantly refetching them from the thread.

fble bench: 2m31s -> 2m28s.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 
 * Figure out why sustained-put-get test is showing memory growth.
+* Clean up how we track io activity?
 * Remove statics and code from Stack?
  - Fetch them from the func when needed instead?
 
