--- a/TODO.txt
+++ b/TODO.txt
@@ -12,15 +12,12 @@
    that way instead. So that literally it is impossible for anyone to call
    into the root block except via new profile thread.
 
-* [profile] Separate from main eval
- - Switch to convention that caller is responsible for enter block.
- - Replace AutoExitBlock with ReplaceBlock.
+* [profile] Cleanup
+ - Switch to convention that caller is responsible for enter block?
+ - Replace AutoExitBlock with ReplaceBlock?
 
 * [type] Inline fields and args data into FbleType objects?
 
-* [gc] Collect stats during gc?
- - Ideally # of objects freed, # of objects retained.
-* [gc] Implement adaptive rate gc?
 * [gc] Implement generational gc?
 
 * [test] Check if 6.4-proc-exec/eval/propagate-abort-blocking test fails when
