Don't return value from FbleValueRetain.
No reason to make it more convenient to call FbleValueRetain.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 
-* Inline ToObj in ms-heap.
+* Don't Release args in NewUnion and NewStruct functions.
 * Split apply instr into call and tail call instructions.
-* Don't return a pointer from retain function.
 * Abort by reading through instructions instead of using NULL to know what we
   own on the stack.
 * Split compile into typecheck and codegen.
