Change approach to aborting threads.
Unwind the thread by executing instructions instead of directly popping the
stack. That way we can make use of the instructions to keep track of which
values are live on the stack instead of whether they are NULL or not.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 
-* Split apply instr into call and tail call instructions.
-* Abort by reading through instructions instead of using NULL to know what we
-  own on the stack.
+* Don't rely on NULL vs. non-NULL to free values except for abort?
+ - But how do you know what to free when you do a tail call?
 * Split compile into typecheck and codegen.
 * Avoid emitting ref/release for non-recursive variables.
 * Figure out how to do better lifecycle analysis in the compiler
