Use a single arena in load.
Instead of splitting between load and program arenas. There's no need to
separate them now that we will properly clean up allocations on the program
arena.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 * [compile] Do proper memory tracking and cleanup for the abstract syntax.
- - Avoid making a separate load_arena in load.
+ - Track down memory leak in load.c:200 for no-error test.
  - Make sure to retain a copy of filename for locs when generating instruction
    blocks.
  - Replace prgm_arena and eval_arena with a single arena now, and always
