--- a/TODO.txt
+++ b/TODO.txt
@@ -3,9 +3,7 @@
 
 * Better document ownership of memory in fble-syntax.h
 
-* Do FbleAssertEmptyArena automatically in FbleFreeArena?
- - It seems like a bad idea to rely on bulk free now.
-* Move FbleParse to an internal header file.
+* Move FbleParse and FbleFreeExpr to an internal header file.
 
 * Split compile into typecheck and codegen.
 * Don't rely on NULL vs. non-NULL to free values.
@@ -109,13 +107,6 @@
 * [release] Write man pages for fble and friends?
 * [release] Better error message for importing something from a module that
   is not defined in the module?
-
-* [arena] Rethink arenas and documentation, because some cases appear to assume you
-  have a bulk-free arena. Other cases its not well specified what is freed
-  explicitly and what is expected to be freed implicitly.
-  I claim a good model is: pass an arena to a function to say: the function
-  allocates its result in this arena. The function creates and uses a separate
-  arena for its intermediate allocations.
 
 * [debugger] Implement an fble debugger. Features:
  - Set a breakpoint at a line in a file.
