--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@
  - Track down the remaining seg faults.
 
 * Better document ownership of memory in fble-syntax.h
+* Why use FbleNewString, FbleStringRetain, and not FbleRetainString?
 
 * Move FbleParse and FbleFreeExpr to an internal header file.
 
