--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 * Better document ownership of memory in fble-syntax.h
 * Why use FbleNewString, FbleStringRetain, and not FbleRetainString?
-  FbleTypeRetain, FbleTypeRelease, FbleValueRetain, FbleValueRelease,
-  FbleKindRetain, FbleKindRelease,
+   FbleValueRetain, FbleValueRelease,
 
 * Move FbleParse and FbleFreeExpr to an internal header file.
 
