Inline fble-compile.h into fble.h.
fble-compile.h has little enough stuff in it that it doesn't seem to warrent
its own header file.

--- a/TODO.txt
+++ b/TODO.txt
@@ -16,6 +16,7 @@
 * [eval] Have option to turn off checking for nulls and other runtime errors?
 
 * Clean up how we track io activity?
+* Add tests to increase code coverage.
 
 * Allow zero-argument functions in the language spec?
 
