Add FBLE_STRUCT_ACCESS_EXPR and FBLE_UNION_ACCESS_EXPR tags.
In preparation for separating typecheck from codegen.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+
+* Rename MiscAccessExpr to AccessExpr
 * Split compile into typecheck and codegen.
  - Add expr tags for apply and access. Resolve misc as part of type checking.
  - Change field name to FbleField with name and tag. Resolve as part of type
