--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 
-* Rename MiscAccessExpr to AccessExpr
 * Split compile into typecheck and codegen.
- - Add expr tags for apply and access. Resolve misc as part of type checking.
+ - Add expr tags for apply. Resolve misc as part of type checking.
  - Change field name to FbleField with name and tag. Resolve as part of type
    checking.
  - Pull type checking out into a separate file.
