Add FBLE_FUNC_APPLY_EXPR and FBLE_STRUCT_VALUE_EXPLICIT_TYPE_EXPR.
Resolved during type check, in preparation for splitting type check out into a
separate pass.

--- a/langs/fble.txt
+++ b/langs/fble.txt
@@ -1090,7 +1090,7 @@ expr ::=
  | path                                            (* module_ref *)
 
  | '*(' [type name [',' type name [...]]] ')'      (* struct_type *)
- | type '(' [expr [',' expr [...]]] ')'            (* struct_value_explicit_type, get, put *)
+ | type '(' [expr [',' expr [...]]] ')'            (* struct_value_explicit_type *)
  | '@(' [name [':' expr] [',' ...]] ')'            (* struct_value_implicit_type *)
  | expr '.' name                                   (* struct_access *)
 
